			format + terminating NULL.

 301.	[bug]		Uninitalised pointer in host:printmessage(). (RT #159)

 300.	[bug]		Using both <isc/net.h> and <lwres/net.h> didn't work
			on platforms lacking IPv6 because each included their
			own ipv6 header file for the missing definitions.  Now
			each library's ipv6.h defines the wrapper symbol of
			the other (ISC_IPV6_H and LWRES_IPV6_H).

 299.			Has not been pulled up to the 9.0.0 release branch.

	--- 9.0.0b5 released ---

 298.	[bug]		A mutex deadlock occurred during shutdown of the
			interface manager under certain conditions.
			Digital Unix systems were the most affected.

 297.   [bug]           Specifying a key name that wasn't fully qualified
                        in certain parts of the config file could cause
                        an assertion failure.

 296.	[bug]		"make install" from a separate build directory
			failed unless configure had been run in the source
			directory, too.

 295.	[bug]		When invoked with type==CNAME and a message
			not constructed by dns_message_parse(),
			dns_message_findname() failed to find anything
			due to checking for attribute bits that are set
			only in dns_message_parse().   This caused an
			infinite loop when constructing the response to
			an ANY query at a CNAME in a secure zone.

 294.	[bug]		If we run out of space in while processing glue
			when reading a master file and commit "current name"
			reverts to "name_current" instead of staying as
			"name_glue".

 292.	[bug]		Due to problems with the way some operating systems
			handle simultaneous listening on IPv4 and IPv6
			addresses, the server no longer listens on IPv6
			addresses by default.  To revert to the previous
			behavior, specify "listen-on-v6 { any; };" in
			the config file.

 291.	[func]		Caching servers no longer send outgoing queries
			over TCP just because the incoming recursive query
			was a TCP one.

 290.   [cleanup]	+twiddle option to dig (for testing only) removed.
